--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@types/jest": "24.0.17",
     "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
+    "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.1",
+    "@types/yup": "^0.26.22"
   }
 }
