--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }	 
-  ],
-  "start_url": ".",
+  "manifest_version": 2,
+  "short_name": "SMM Hesapmama Aracı",
+  "name": "Serbest Meslek Makbuzu Hesaplama",
+  "description": "Serbest meslek makbuzu hesaplama yapabilirsiniz",
+  "version": "0.0.1",
+  "content_security_policy": "script-src 'self' 'sha256-sZqJRx3UchDAgz/N+VnRWPdKCn9I5dfLgqJHS6OO2e4='; object-src 'self'",
+  "permissions": [],
+  "icons": {
+    "16": "logo.png",
+    "48": "logo192.png",
+    "128": "logo512.png"
+  },
+  "start_url": "index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "Open the popup"
+  }
 }
